# nuclei-worker

./: Dockerfile  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  main.py  messaging.py
app/service/: scanner.py
