[project]
name = "nuclei-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "asyncpg==0.29.0",
    "nats-py==2.9.0",
    "pydantic-settings==2.4.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.bandit]
skips = ["B603", "B607"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
